<resources>
    <string name="app_name">PersonalIntro</string>

    <string name="image_description">Selfie</string>
    <string name="camera_action_description">Click to take a pic</string>

    <string name="person_detail_title">Detail</string>
    <string name="person_name">Name : </string>
    <string name="person_gender">Gender : </string>

    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>

    <string name="person_birth">Birthday : </string>
    <string name="person_intro_title">Introduction</string>
    <string name="person_associates">Associate With</string>
    <string name="person_note_title">Note</string>

    <string name="hint">Long Click</string>
    <string name="hint_intro">Long tap to enter the intro</string>
    <string name="hint_note">Tap here to enter side note</string>
    <string name="hint_association">Who associates with this person?</string>

    <string name="time_picker_back">BACK</string>

    <string name="dialog_title_gender">Gender</string>
    <string name="dialog_title_delete">Delete This Person</string>
    <string name="dialog_content_delete">Remove %1$s from your list ?
        \n(There is no going back &lt;Enhancement&gt;)</string>

    <string name="menu_delete_person">Delete</string>

    <string name="all_error">Error !</string>
    <string name="err_no_pic_dir">Fail to find directory that stores pictures.</string>
    <string name="err_no_camera_app">Fail to find a camera app.</string>
    <string name="err_no_image_viewer_app">Fail to find an image viewer.</string>
    <string name="err_no_browser">Fail to find a browser.</string>

    <string name="item_home">Home</string>
    <string name="item_setting">Setting</string>
    <string name="item_credit">Credit</string>
    <string name="item_about">About</string>
    <string name="item_github">gitHub</string>
    <string name="item_license">License</string>

    <string name="about_dialog_content">This project is launched on 12/09/16, right now it hasn\'t been finished yet.
    \n\nI will probably stop in the middle and come back when I finish the book <i>\"Android Programming: The Big Nerd Ranch Guide (2nd Edition)\"</i>.
    \n\nAs for now, the app is <b>NOT</b> currently actively developing by me.</string>
    <string name="about_dialog_title">About</string>
    <string name="credit_dialog_content">1) Stack Overflow
        \n2) <i>\"Android Programming: The Big Nerd Ranch Guide (2nd Edition)\"</i>
        \n3) gitHub (libraries)
        \n4) IntelliJ, Android Studio
        \n5) and so on</string>
    <string name="credit_dialog_title">All Credit Goes To</string>

    <string name="link_material_dialog"><![CDATA[<a href="https://github.com/afollestad/material-dialogs">GitHub</a>]]></string>
    <string name="link_material_drawer"><![CDATA[<a href="https://github.com/mikepenz/MaterialDrawer">GitHub</a>]]></string>
    <string name="link_android_bootstrap"><![CDATA[<a href="https://github.com/Bearded-Hen/Android-Bootstrap">GitHub</a>]]></string>
    <string name="link_photo_view"><![CDATA[<a href="https://github.com/chrisbanes/PhotoView">GitHub</a>]]></string>
    <string name="link_circle_image_view"><![CDATA[<a href="https://github.com/hdodenhof/CircleImageView">GitHub</a>]]></string>
    <string name="link_rounded_image_view"><![CDATA[<a href="https://github.com/vinc3m1/RoundedImageView">GitHub</a>]]></string>
    <string name="link_android_iconics"><![CDATA[<a href="https://github.com/mikepenz/Android-Iconics">GitHub</a>]]></string>

    <string name="title_material_dialog">material-dialogs</string>
    <string name="title_material_drawer">MaterialDrawer</string>
    <string name="title_android_bootstrap">Android-Bootstrap</string>
    <string name="title_photo_view">PhotoView</string>
    <string name="title_circle_image_view">CircleImageView</string>
    <string name="title_rounded_image_view">RoundedImageView</string>
    <string name="title_android_iconics">Android-Iconics</string>

    <string name="suggestion_license">For now, Using landscape mode is recommended.</string>

    <string-array name="gender_list">
        <item>Female</item>
        <item>Other</item>
        <item>Male</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
